// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Radio Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"one\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-purple\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Option 1</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"two\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-purple\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Option 2</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"three\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-purple\\"
    /><label for=\\"three\\" class=\\"drac-text drac-text-white\\">Option 3</label>
  </div>
</div>
",
  "react": "<div>
  <div style={{...}}>
    <Radio id=\\"one\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Option 1
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"two\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Option 2
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"three\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"three\\" className=\\"drac-text drac-text-white\\">
      Option 3
    </label>
  </div>
</div>",
  "title": "Usage",
}
`;

exports[`Site: Radio Colors 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"black\\"
      color=\\"black\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-black\\"
    /><label for=\\"black\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"white\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
    /><label for=\\"white\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"cyan\\"
      color=\\"cyan\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-cyan\\"
    /><label for=\\"cyan\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"green\\"
      color=\\"green\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-green\\"
    /><label for=\\"green\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"orange\\"
      color=\\"orange\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-orange\\"
    /><label for=\\"orange\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"pink\\"
      color=\\"pink\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-pink\\"
    /><label for=\\"pink\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"purple\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-purple\\"
    /><label for=\\"purple\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"red\\"
      color=\\"red\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-red\\"
    /><label for=\\"red\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"yellow\\"
      color=\\"yellow\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-yellow\\"
    /><label for=\\"yellow\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"animated\\"
      color=\\"animated\\"
      name=\\"demo\\"
      class=\\"drac-radio\\"
    /><label for=\\"animated\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"cyanGreen\\"
      color=\\"cyanGreen\\"
      name=\\"demo\\"
      class=\\"drac-radio\\"
    /><label for=\\"cyanGreen\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"pinkPurple\\"
      color=\\"pinkPurple\\"
      name=\\"demo\\"
      class=\\"drac-radio\\"
    /><label for=\\"pinkPurple\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"purpleCyan\\"
      color=\\"purpleCyan\\"
      name=\\"demo\\"
      class=\\"drac-radio\\"
    /><label for=\\"purpleCyan\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"yellowPink\\"
      color=\\"yellowPink\\"
      name=\\"demo\\"
      class=\\"drac-radio\\"
    /><label for=\\"yellowPink\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
</div>
",
  "react": "<div>
  <div style={{...}}>
    <Radio id=\\"black\\" color=\\"black\\" name=\\"demo\\" />
    <label htmlFor=\\"black\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"white\\" color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"white\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"cyan\\" color=\\"cyan\\" name=\\"demo\\" />
    <label htmlFor=\\"cyan\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"green\\" color=\\"green\\" name=\\"demo\\" />
    <label htmlFor=\\"green\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"orange\\" color=\\"orange\\" name=\\"demo\\" />
    <label htmlFor=\\"orange\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"pink\\" color=\\"pink\\" name=\\"demo\\" />
    <label htmlFor=\\"pink\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"purple\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"purple\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"red\\" color=\\"red\\" name=\\"demo\\" />
    <label htmlFor=\\"red\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"yellow\\" color=\\"yellow\\" name=\\"demo\\" />
    <label htmlFor=\\"yellow\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"animated\\" color=\\"animated\\" name=\\"demo\\" />
    <label htmlFor=\\"animated\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"cyanGreen\\" color=\\"cyanGreen\\" name=\\"demo\\" />
    <label htmlFor=\\"cyanGreen\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"pinkPurple\\" color=\\"pinkPurple\\" name=\\"demo\\" />
    <label htmlFor=\\"pinkPurple\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"purpleCyan\\" color=\\"purpleCyan\\" name=\\"demo\\" />
    <label htmlFor=\\"purpleCyan\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"yellowPink\\" color=\\"yellowPink\\" name=\\"demo\\" />
    <label htmlFor=\\"yellowPink\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
</div>",
  "title": "Colors",
}
`;

exports[`Site: Radio Disabled 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"one\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"two\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Unchecked</label>
  </div>
</div>
",
  "react": "<div>
  <div style={{...}}>
    <Radio id=\\"one\\" defaultChecked={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Checked
    </label>
  </div>
  <div style={{...}}>
    <Radio id=\\"two\\" color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Unchecked
    </label>
  </div>
</div>",
  "title": "Disabled",
}
`;
